# podscope

./: .env.example  .gitignore  BENCHMARKS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: co_occurrence.py  export_csv.py  graph_load.py
scripts/: benchmark.py  run_batch_with_retry.sh
src/: db.py  ingest.py  metrics.py  run.py  transcribe.py  tui.py
src/processors/: abstractive.py  base.py  entities.py  extractive.py  registry.py  topics.py
tests/: test_correctness_regression.py  test_db.py  test_ingest.py  test_metrics.py  test_performance.py  test_playlist_e2e.py  test_processors.py  test_registry.py  test_run.py
tests/fixtures/: golden_correctness.json  sample_segments.json
